updates plugin name in package.json

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
       "email": "malan@harvard.edu"
     }
   ],
-  "name": "c9.ide.cs50.info",
+  "name": "harvard.cs50.info",
   "plugins": {
     "info": {}
   }
